--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -52,7 +52,7 @@
             <div class="content-section" id="edit-profile">Edit Profile<i class="fa fa-chevron-right fa-right"></i></div>
             <hr class="divider">
             <div class="content-section" style="height: 50px;justify-content: center;align-content: center">
-                <button type="button" title="Sign out"  class="sign-out-button  sign-out-button-color sign-out-button-background-color" onclick="sign_out_upload(event)">
+                <button type="button" title="Sign out"  class="sign-out-button  sign-out-button-color sign-out-button-background-color" onclick="sign_out(event)">
                     <span>Sign Out &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-chevron-right"></i></span>
                 </button>
             </div>
@@ -73,105 +73,9 @@
         <!--log in content-->
     </div>
     <div class="navigation-bar-bottom">
-        <div class="menu-icon-wrapper">
-            <div class="three-line">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-
-        <div class="sidebar">
-            <!-- 主菜单 -->
-            <div class="main-menu">
-                <a href='/' class="color-home" data-target="home-submenu">Home</a>
-                <a href="#" class="color-gallery" data-target="gallery-submenu">Gallery  <i class="fa fa-angle-right" style="font-size:30px;margin-left: 280px"></i></a>
-                <a href="#" class="color-watchlist" data-target="watchlist-submenu">Watch List</a>
-                <a href="#" class="color-help" data-target="help-submenu">Help <i class="fa fa-angle-right" style="font-size:30px;margin-left: 300px"></i></a>
-                <a href="#" class="color-whatwedo" data-target="what We Do-submenu">What We Do</a>
-                <a href="#" class="color-community" data-target="community-submenu">Community <i class="fa fa-angle-right" style="font-size:30px;margin-left: 240px"></i></a>
-            </div>
-
-            <!-- 子菜单 -->
-            <div class="submenu" id="gallery-submenu">
-                <div class="submenu-div1 back-from-gallery">
-                    <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>GALLERY</span>
-                </div>
-                <div class="submenu-div2">
-                    <h3 ><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                    <a href="#" onclick="GotoGallery(event)">Default</a>
-                    <a href="#">Sort By Credibility</a>
-                    <a href="#">Sort By Publish Time</a>
-                </div>
-                <div class="submenu-div3">
-                    <h3><i class="fa fa-star" style="font-size:24px;color: #FFCD29"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
-                    <a href="#">Show All</a>
-                    <a href="#">Top 10</a>
-                    <h3 style="margin-top: 15px"><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
-                    <a href="#">Show All</a>
-                    <a href="#">Sort By Credibility</a>
-                    <a href="#">Sort By Publish Time</a>
-                </div>
-                <div class="submenu-div4">
-                    <div style="width: 80%; height: 80%; display: flex;position: relative; left: 10%; top: 10%;background: #00467F">
-                        <a href="#"><img src="/static/images/background_gallery.jpeg" style="width: 330px;height: 100%"/></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="submenu1" id="help-submenu">
-                <div class="submenu1-div1 back-from-help">
-                    <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>HELP</span>
-                </div>
-                <div class="submenu1-div5">
-                    <h3>About The Trust Indicator</h3>
-                    <a href="#">Operating guide</a>
-                    <a href="#">Our faculties and institutes</a>
-                    <a href="#">Business and employers</a>
-                    <a href="#">Community services</a>
-                </div>
-                <div class="submenu1-div6">
-                    <h3>Connect with us</h3>
-                    <a href="#">Contact us All</a>
-                    <a href="#">Our people</a>
-                    <a href="#">Cooperation partner</a>
-
-                </div>
-                <div class="submenu1-div7">
-                    <h3>Work with us</h3>
-                    <a href="#">Staff benefits</a>
-                    <a href="#">Career development</a>
-                </div>
-            </div>
-
-            <div class="submenu2" id="community-submenu">
-                <div class="submenu2-div1 back-from-community">
-                    <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>Community</span>
-                </div>
-                <div class="submenu2-div8">
-                    Help Center
-                </div>
-                <div class="submenu2-div8">
-                    Contributor Zone
-                </div>
-                <div class="submenu2-div8">
-                    Feedback
-                </div>
-                <div class="submenu2-div8">
-                    Change Password
-                </div>
-                <div class="submenu2-div8">
-                    Edit Profile
-                </div>
-                <div class="submenu2-div8">
-                    Report Debug
-                </div>
-            </div>
-        </div>
-
         <div id="mcmenu">
             <ul>
-                <li  id="menu-home"><a href="/">Home</a></li>
+                <li id="menu-ahome"><a href="/">Home</a></li>
                 <li class="full-width" id="menu-gallery">
                     <span>Gallery &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                     <div class="dropdown">
@@ -191,47 +95,20 @@
                             <a href="#">Sort By Publish Time</a>
                         </div>
                         <div class="clm background-gallery">
-                            <a href="#" ><img src="/static/images/background_gallery.jpeg"style="width:280px"/></a>
+                            <a href="#" ><img src="/static/images/background_gallery.jpeg" style="width:280px"/></a>
                         </div>
                     </div>
                 </li>
                 <li id="menu-watchlist"><a href="#">Watch List</a></li>
-                <li id="menu-help" class="full-width">
-                    <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
-                    <div class="dropdown">
-                        <div class="clm">
-                            <h3>About the Trust Indicator</h3>
-                            <a href="#">Operating guide</a>
-                            <a href="#">Our faculties and institutes</a>
-                            <a href="#">Business and employers</a>
-                            <a href="#">Community services</a>
-                            <hr class="line">
-                        </div>
-                        <div class="clm">
-                            <h3>Connect with us</h3>
-                            <a href="#">Contact us</a>
-                            <a href="#">Our people</a>
-                            <a href="#">Cooperation partner</a>
-                            <hr class="line">
-                        </div>
-                        <div class="clm">
-                            <h3>Work with us</h3>
-                            <a href="#">Staff benefits</a>
-                            <a href="#">Career development</a>
-                            <hr class="line">
-                        </div>
-                    </div>
-                </li>
-                <li id="menu-wwhatwedo"><a href="#">What We Do</a></li>
+                <li id="menu-help"><a href="#">What We Do</a></li>
                 <li id="menu-community">
-                    <span>Community &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
+                    <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                     <ul class="right0">
-                        <li><a href="#">Help Center</a></li>
                         <li><a href="#">Contributor Zone</a></li>
                         <li><a href="#" onclick="GoToFeedback(event)">Feedback</a></li>
                         <li><a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
-  <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
-  <path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
+<path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
+<path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
 </svg></a></li>
                     </ul>
                 </li>
