--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </li>
                 <li id="menu-watchlist"><a href="#">Watch List</a></li>
-                <li id="menu-help"><a href="#">What We Do</a></li>
+                <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
                 <li id="menu-community">
                     <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                     <ul class="right0">
