--- a/src/Flask/templates/html/feedback.html
+++ b/src/Flask/templates/html/feedback.html
@@ -12,112 +12,115 @@
     <link rel="icon" href="{{ url_for('static', filename='images/CredibilitySiginal_v2.0.0.png') }}" type="image/png">
 </head>
 <body>
+<div class="page-container">
     <div class="top-title">
-    <p onclick="top_register()">Apply for becoming a membership </p>
-</div>
+        <p onclick="top_register()">Apply for becoming a membership </p>
+    </div>
+
     <div class="navigation-bar-container">
-    <div class="navigation-bar-top">
-        <!--search box-->
-        <div class="search-container">
-            <div class="info-panels">
-                <div class="input-color-group-one">
-                    <input class="search-input" autocomplete="on" name="text" type="text" required="" placeholder="Rapunga / Search">
-                    <label class="search-label">Search</label>
-                    <button class="search-button">
-                        <svg fill="white" width="15px" height="15px" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd"></path>
-                        </svg>
-                    </button>
+        <div class="navigation-bar-top">
+            <!--search box-->
+            <div class="search-container">
+                <div class="info-panels">
+                    <div class="input-color-group-one">
+                        <input class="search-input" autocomplete="on" name="text" type="text" required="" placeholder="Rapunga / Search">
+                        <label class="search-label">Search</label>
+                        <button class="search-button">
+                            <svg fill="white" width="15px" height="15px" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--search box-->
+            <!--search box-->
 
-        <!--log in-->
-        <div class="login-container" onclick="sign_in(event)">
-            <div class="sign-icon">
-                <i class="fa fa-user-circle-o" style="font-size:30px"></i>
+            <!--log in-->
+            <div class="login-container" onclick="sign_in(event)">
+                <div class="sign-icon">
+                    <i class="fa fa-user-circle-o" style="font-size:30px"></i>
+                </div>
+                <div class="sign-text">Sign In</div>
             </div>
-            <div class="sign-text">Sign In</div>
-        </div>
-        <!--log in-->
+            <!--log in-->
 
-        <!--log in content-->
-        <div class="sign-in-content">
-            <div class="content-section" id="show-name">Hi Song Han</div>
-            <hr class="divider">
-            <div class="content-section" id="change-password">Change Password<i class="fa fa-chevron-right fa-right" ></i></div>
-            <hr class="divider">
-            <div class="content-section" id="edit-profile">Edit Profile<i class="fa fa-chevron-right fa-right"></i></div>
-            <hr class="divider">
-            <div class="content-section" style="height: 50px;justify-content: center;align-content: center">
-                <button type="button" title="Sign out"  class="sign-out-button  sign-out-button-color sign-out-button-background-color" onclick="sign_out(event)">
-                    <span>Sign Out &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-chevron-right"></i></span>
-                </button>
+            <!--log in content-->
+            <div class="sign-in-content">
+                <div class="content-section" id="show-name">Hi Song Han</div>
+                <hr class="divider">
+                <div class="content-section" id="change-password">Change Password<i class="fa fa-chevron-right fa-right" ></i></div>
+                <hr class="divider">
+                <div class="content-section" id="edit-profile">Edit Profile<i class="fa fa-chevron-right fa-right"></i></div>
+                <hr class="divider">
+                <div class="content-section" style="height: 50px;justify-content: center;align-content: center">
+                    <button type="button" title="Sign out"  class="sign-out-button  sign-out-button-color sign-out-button-background-color" onclick="sign_out(event)">
+                        <span>Sign Out &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-chevron-right"></i></span>
+                    </button>
+                </div>
+                <div class="content-triangle"></div>
             </div>
-            <div class="content-triangle"></div>
+            <!--log in content-->
+            <div class="language-change" onclick="toggleDropdown(event)">
+                <span id="selected-language">EN</span>
+                <span class="dropdown-arrow"><i class="fa fa-caret-down" style="font-size:20px;padding-left: 5px"></i></span>
+                <ul id="language-options" class="hidden">
+                    <li onclick="updateLanguage('EN', event)">English</li>
+                    <li onclick="updateLanguage('CN', event)">Chinese</li>
+                    <li onclick="updateLanguage('ES', event)">Spanish</li>
+                    <li onclick="updateLanguage('FR', event)">French</li>
+                    <li onclick="updateLanguage('DE', event)">German</li>
+                </ul>
+            </div>
+            <!--log in content-->
         </div>
-        <!--log in content-->
-        <div class="language-change" onclick="toggleDropdown(event)">
-            <span id="selected-language">EN</span>
-            <span class="dropdown-arrow"><i class="fa fa-caret-down" style="font-size:20px;padding-left: 5px"></i></span>
-            <ul id="language-options" class="hidden">
-                <li onclick="updateLanguage('EN', event)">English</li>
-                <li onclick="updateLanguage('CN', event)">Chinese</li>
-                <li onclick="updateLanguage('ES', event)">Spanish</li>
-                <li onclick="updateLanguage('FR', event)">French</li>
-                <li onclick="updateLanguage('DE', event)">German</li>
-            </ul>
+        <div class="navigation-bar-bottom">
+            <div id="mcmenu">
+                <ul>
+                    <li id="menu-ahome"><a href="/">Home</a></li>
+                    <li class="full-width" id="menu-gallery">
+                        <span>Gallery &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
+                        <div class="dropdown">
+                            <div class="clm">
+                                <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
+                                <a href="#" onclick="GotoGallery(event)">Default</a>
+                                <a href="#">Sort By Credibility</a>
+                                <a href="#">Sort By Publish Time</a>
+                            </div>
+                            <div class="clm">
+                                <h3><i class="fa fa-star" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
+                                <a href="#">Show All</a>
+                                <a href="#">Top 10</a>
+                                <h3><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
+                                <a href="#">Show All</a>
+                                <a href="#">Sort By Credibility</a>
+                                <a href="#">Sort By Publish Time</a>
+                            </div>
+                            <div class="clm background-gallery">
+                                <a href="#" ><img src="/static/images/background_gallery.jpeg" style="width:280px"/></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li id="menu-watchlist"><a href="#">Watch List</a></li>
+                    <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
+                    <li id="menu-community">
+                        <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
+                        <ul class="right0">
+                            <li><a href="#">Contributor Zone</a></li>
+                            <li><a href="#" onclick="GoToFeedback(event)">Feedback</a></li>
+                            <li><a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
+    <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
+    <path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
+    </svg></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <!--log in content-->
+        <div class="logo"></div>
     </div>
-    <div class="navigation-bar-bottom">
-        <div id="mcmenu">
-            <ul>
-                <li id="menu-ahome"><a href="/">Home</a></li>
-                <li class="full-width" id="menu-gallery">
-                    <span>Gallery &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
-                    <div class="dropdown">
-                        <div class="clm">
-                            <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                            <a href="#" onclick="GotoGallery(event)">Default</a>
-                            <a href="#">Sort By Credibility</a>
-                            <a href="#">Sort By Publish Time</a>
-                        </div>
-                        <div class="clm">
-                            <h3><i class="fa fa-star" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
-                            <a href="#">Show All</a>
-                            <a href="#">Top 10</a>
-                            <h3><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
-                            <a href="#">Show All</a>
-                            <a href="#">Sort By Credibility</a>
-                            <a href="#">Sort By Publish Time</a>
-                        </div>
-                        <div class="clm background-gallery">
-                            <a href="#" ><img src="/static/images/background_gallery.jpeg" style="width:280px"/></a>
-                        </div>
-                    </div>
-                </li>
-                <li id="menu-watchlist"><a href="#">Watch List</a></li>
-                <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
-                <li id="menu-community">
-                    <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
-                    <ul class="right0">
-                        <li><a href="#">Contributor Zone</a></li>
-                        <li><a href="#" onclick="GoToFeedback(event)">Feedback</a></li>
-                        <li><a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
-<path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
-<path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
-</svg></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="logo"></div>
-</div>
 
-    <div class="feedback-form">
+    <div class="main-content-container">
+        <div class="feedback-form">
         <h2>Feedback</h2>
         <p>We would love to hear your thoughts.</p>
         <p>We've grabbed your name and email from your login, but if you prefer, you can change it. </p>
@@ -144,6 +147,7 @@
                 <input type="submit" value="Send Feedback">
             </div>
         </form>
+    </div>
     </div>
 
     <div class="bottom-navigation-bar">
@@ -174,5 +178,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
