Changed upload page style.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/templates/html/feedback.html
+++ b/src/Flask/templates/html/feedback.html
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </li>
-                    <li id="menu-watchlist"><a href="#">Watch List</a></li>
+                    <li id="menu-upload"><a href="/upload">Upload and Analyse</a></li>
                     <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
                     <li id="menu-community">
                         <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
