Changed upload page style sheet.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -121,7 +121,8 @@
         <div class="logo"></div>
     </div>
 
-    <div class="drop-show-metadata-container">
+    <div class="main-content-container">
+        <div class="drop-show-metadata-container">
         <div class="drop-box-container">
             <div class="container">
                 <form class="drop-form">
@@ -267,7 +268,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div class="bottom-navigation-bar">
         <div class="connect-container">
             <table class="connect-table">
